--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -40,10 +40,12 @@ module:
   system: 0
   taxonomy: 0
   text: 0
+  token: 0
   toolbar: 0
   update: 0
   user: 0
   views_ui: 0
+  pathauto: 1
   views: 10
   standard: 1000
 theme:
