--- a/config/sync/core.entity_view_display.node.article.default.yml
+++ b/config/sync/core.entity_view_display.node.article.default.yml
@@ -6,6 +6,7 @@ dependencies:
     - core.entity_view_display.comment.comment.default
     - field.field.node.article.body
     - field.field.node.article.comment
+    - field.field.node.article.field_block_list
     - field.field.node.article.field_image
     - field.field.node.article.field_tags
     - image.style.wide
@@ -37,6 +38,15 @@ content:
       pager_id: 0
     third_party_settings: {  }
     weight: 110
+    region: content
+  field_block_list:
+    type: entity_reference_entity_view
+    label: above
+    settings:
+      view_mode: block_list
+      link: false
+    third_party_settings: {  }
+    weight: 111
     region: content
   field_image:
     type: image
