--- a/config/sync/core.entity_view_display.node.page.block_list.yml
+++ b/config/sync/core.entity_view_display.node.page.block_list.yml
@@ -1,50 +1,42 @@
-uuid: f6c30db6-acdc-4cdf-8807-19b82a454171
+uuid: d1139c49-456f-45b9-a11c-2aa5411be0d5
 langcode: en
 status: true
 dependencies:
   config:
+    - core.entity_view_mode.node.block_list
     - field.field.node.page.body
     - field.field.node.page.field_image_1
     - field.field.node.page.field_short_description
     - node.type.page
   module:
     - image
-    - text
     - user
 _core:
   default_config_hash: M_Y8L5tfmhx7DR143E05YyZSpvgil6VFvqcfBWykalg
-id: node.page.default
+id: node.page.block_list
 targetEntityType: node
 bundle: page
-mode: default
+mode: block_list
 content:
-  body:
-    type: text_default
-    label: hidden
-    settings: {  }
-    third_party_settings: {  }
-    weight: 100
-    region: content
   field_image_1:
     type: image
-    label: above
+    label: visually_hidden
     settings:
       image_link: ''
       image_style: ''
       image_loading:
         attribute: lazy
     third_party_settings: {  }
-    weight: 103
+    weight: 1
     region: content
   field_short_description:
     type: string
-    label: above
+    label: visually_hidden
     settings:
       link_to_entity: false
     third_party_settings: {  }
-    weight: 104
+    weight: 0
     region: content
-  links:
-    weight: 101
-    region: content
-hidden: {  }
+hidden:
+  body: true
+  links: true
