--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "drupal/core-composer-scaffold": "^10.3",
         "drupal/core-project-message": "^10.3",
         "drupal/core-recommended": "^10.3",
+        "drupal/paragraphs": "^1.18",
         "drush/drush": "^13.0"
     },
     "conflict": {
