--- a/config/sync/core.entity_view_display.node.article.default.yml
+++ b/config/sync/core.entity_view_display.node.article.default.yml
@@ -8,6 +8,7 @@ dependencies:
     - field.field.node.article.comment
     - field.field.node.article.field_image
     - field.field.node.article.field_tags
+    - field.field.node.article.field_youtube_video
     - image.style.wide
     - node.type.article
   module:
@@ -56,6 +57,15 @@ content:
       link: true
     third_party_settings: {  }
     weight: 10
+    region: content
+  field_youtube_video:
+    type: entity_reference_entity_view
+    label: above
+    settings:
+      view_mode: default
+      link: false
+    third_party_settings: {  }
+    weight: 111
     region: content
   links:
     settings: {  }
