LDT-704: Create a basic drupal search page and how we can implement search API

--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -17,6 +17,8 @@ module:
   contextual: 0
   datetime: 0
   dblog: 0
+  devel: 0
+  devel_generate: 0
   dynamic_page_cache: 0
   editor: 0
   field: 0
@@ -36,6 +38,9 @@ module:
   path: 0
   path_alias: 0
   search: 0
+  search_api: 0
+  search_api_db: 0
+  search_api_db_defaults: 0
   shortcut: 0
   system: 0
   taxonomy: 0
