--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,9 @@
         "drupal/core-composer-scaffold": "^10.3",
         "drupal/core-project-message": "^10.3",
         "drupal/core-recommended": "^10.3",
+        "drupal/devel": "^5.3",
+        "drupal/search_api": "^1.35",
+        "drupal/webform": "^6.2",
         "drush/drush": "^13.0"
     },
     "conflict": {
