--- a/config/sync/block.block.olivero_page_title.yml
+++ b/config/sync/block.block.olivero_page_title.yml
@@ -2,6 +2,8 @@ uuid: df49749a-817a-49df-8082-73dc25c4a2e3
 langcode: en
 status: true
 dependencies:
+  module:
+    - system
   theme:
     - olivero
 _core:
@@ -17,4 +19,8 @@ settings:
   label: 'Page title'
   label_display: '0'
   provider: core
-visibility: {  }
+visibility:
+  request_path:
+    id: request_path
+    negate: true
+    pages: '/event-listing/*'
