--- a/config/sync/views.view.event_listing.yml
+++ b/config/sync/views.view.event_listing.yml
@@ -548,16 +548,14 @@ display:
           multi_type: separator
           separator: ', '
           field_api_classes: false
-        name:
-          id: name
-          table: taxonomy_term_field_data
-          field: name
-          relationship: field_category
+        field_category_1:
+          id: field_category_1
+          table: node__field_category
+          field: field_category
+          relationship: none
           group_type: group
           admin_label: ''
-          entity_type: taxonomy_term
-          entity_field: name
-          plugin_id: term_name
+          plugin_id: field
           label: ''
           exclude: true
           alter:
@@ -599,11 +597,11 @@ display:
           hide_empty: false
           empty_zero: false
           hide_alter_empty: true
-          click_sort_column: value
-          type: string
+          click_sort_column: target_id
+          type: entity_reference_label
           settings:
-            link_to_entity: false
-          group_column: value
+            link: false
+          group_column: target_id
           group_columns: {  }
           group_rows: true
           delta_limit: 0
@@ -613,7 +611,6 @@ display:
           multi_type: separator
           separator: ', '
           field_api_classes: false
-          convert_spaces: false
       pager:
         type: mini
         options:
@@ -873,15 +870,6 @@ display:
           entity_field: uid
           plugin_id: standard
           required: true
-        field_category:
-          id: field_category
-          table: node__field_category
-          field: field_category
-          relationship: none
-          group_type: group
-          admin_label: 'field_category: Taxonomy term'
-          plugin_id: standard
-          required: false
       header: {  }
       footer: {  }
       display_extenders: {  }
@@ -991,7 +979,7 @@ display:
           plugin_id: text
           empty: true
           content:
-            value: "<div id=\"block-olivero-page-title\" class=\"contextual-region block block-core block-page-title-block\">\r\n  <div class=\"shortcut-wrapper\">\r\n    <h1 class=\"title page-title\">Event Listing for {{ name }}</h1>\r\n  </div>\r\n</div>"
+            value: "<div id=\"block-olivero-page-title\" class=\"contextual-region block block-core block-page-title-block\">\r\n  <div class=\"shortcut-wrapper\">\r\n    <h1 class=\"title page-title\">Event Listing for {{ field_category_1 }}</h1>\r\n  </div>\r\n</div>"
             format: full_html
           tokenize: true
       display_extenders: {  }
