--- a/config/sync/core.entity_view_display.node.event.teaser.yml
+++ b/config/sync/core.entity_view_display.node.event.teaser.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - core.entity_view_mode.node.teaser
     - field.field.node.event.body
+    - field.field.node.event.field_category
     - field.field.node.event.field_date
     - field.field.node.event.field_featured_image
     - field.field.node.event.field_location
@@ -31,6 +32,7 @@ content:
     weight: 100
     region: content
 hidden:
+  field_category: true
   field_date: true
   field_featured_image: true
   field_location: true
