--- a/config/sync/editor.editor.full_html.yml
+++ b/config/sync/editor.editor.full_html.yml
@@ -34,6 +34,7 @@ settings:
       - codeBlock
       - '|'
       - sourceEditing
+      - openai
   plugins:
     ckeditor5_codeBlock:
       languages:
@@ -95,6 +96,12 @@ settings:
       multiBlock: true
     ckeditor5_sourceEditing:
       allowed_tags: {  }
+    openai_ckeditor_openai:
+      completion:
+        enabled: true
+        model: gpt-3.5-turbo
+        temperature: 0.2
+        max_tokens: 512
 image_upload:
   status: true
   scheme: public
